--- a/build-apk-ipa-mobile.yml
+++ b/build-apk-ipa-mobile.yml
@@ -121,14 +121,26 @@ jobs:
       uses: subosito/flutter-action@v2
       with:
         flutter-version: ${{ env.FLUTTER_VERSION }}
+        cache: true
+
+    - name: Install Windows Dependencies
+      run: |
+        choco install -y visualstudio2022buildtools
+        choco install -y visualstudio2022-workload-vctools
+        flutter doctor
+
+    - name: Enable Flutter Windows Desktop Support
+      run: flutter config --enable-windows-desktop
 
     - name: Flet Build Windows
+      shell: bash
       run: |
-        flutter config --no-analytics
-        flet build windows --verbose --no-rich-output --build-number=$env:BUILD_NUMBER --build-version=$env:BUILD_VERSION
+        export BUILD_NUMBER=${{ env.BUILD_NUMBER }}
+        export BUILD_VERSION=${{ env.BUILD_VERSION }}
+        flet build windows --verbose --build-number=$BUILD_NUMBER --build-version=$BUILD_VERSION
 
     - name: Upload Windows Artifact
-      uses: actions/upload-artifact@v4.3.4
+      uses: actions/upload-artifact@v4
       with:
         name: windows-build-artifact
         path: build/windows
@@ -244,4 +256,4 @@ jobs:
         name: ipa-build-artifact
         path: build/ipa
         if-no-files-found: warn
-        overwrite: fals
+        overwrite: false
