--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -116,24 +116,40 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install --upgrade flet
 
     - name: Setup Flutter ${{ env.FLUTTER_VERSION }}
       uses: subosito/flutter-action@v2
       with:
         flutter-version: ${{ env.FLUTTER_VERSION }}
+        cache: true
 
-    - name: Flet Build Windows
+    - name: Install Windows Dependencies
       run: |
-        flutter config --no-analytics
-        flet build windows --verbose --no-rich-output --build-number=$env:BUILD_NUMBER --build-version=$env:BUILD_VERSION
+        choco install -y visualstudio2022buildtools
+        choco install -y visualstudio2022-workload-vctools
+        flutter doctor
+
+    - name: Enable Flutter Windows Desktop Support
+      run: flutter config --enable-windows-desktop
+
+    - name: Fix Encoding Issues
+      run: |
+        chcp 65001
+        [System.Console]::OutputEncoding = [System.Text.Encoding]::UTF8
+      shell: pwsh
+
+    - name: Build Flet Windows App
+      run: flet build windows --verbose --no-rich-output --build-number=1 --build-version=1.0.0
 
     - name: Upload Windows Artifact
-      uses: actions/upload-artifact@v4.3.4
+      uses: actions/upload-artifact@v4
       with:
         name: windows-build-artifact
         path: build/windows
         if-no-files-found: warn
         overwrite: false
+
 
   build-aab:
     runs-on: macos-latest
